@@ -6,6 +6,9 @@ Release 0.7
 
 2009-07-04:
 - Emacs mode is installed (again) and byte compiled if emacs is found.
+- Line editors (libedit / readline / none) can now be selected via the cmake
+  LINE_EDITOR option (also, similar to FORCE_PLUGINS, there is now
+  FORCE_LINE_EDITOR).
 
 2009-06-22:
 - IO.stdin/stdout/stderr removed in favor of the same in the 'system' module.
